--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,579 @@
+/*Обнуление*/
+*{padding: 0;margin: 0;border: 0;}
+*,*:before,*:after{-moz-box-sizing: border-box;-webkit-box-sizing: border-box;box-sizing: border-box;}
+:focus,:active{outline: none;}
+a:focus,a:active{outline: none;}
+nav,footer,header,aside{display: block;}
+html,body{height:100%;width:100%;font-size:100%;line-height:1;font-size:14px;-ms-text-size-adjust:100%;-moz-text-size-adjust:100%;-webkit-text-size-adjust:100%;}
+input,button,textarea{font-family:inherit;}
+input::-ms-clear{display: none;}
+button{cursor: pointer;}
+button::-moz-focus-inner {padding:0;border:0;}
+a,a:visited{text-decoration: none;}
+a:hover{text-decoration: none;}
+ul li{list-style: none;}
+img{vertical-align: top;}
+h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: inherit;}
+/*--------------------*/
 
+body {
+    font-family: 'PT Sans', sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+/* ------------------- */
+
+.conteiner {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.head__block {
+    background-color: #000000;
+    padding: 15px;
+}
+.head__row__block,
+.sub__row__block {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.head__row__block img {
+    max-width: 15px;
+}
+.time__block,
+.register {
+    display: flex;
+}
+.time__text,
+.reg {
+    margin-left: 15px;
+    color: #969696;
+    font-size: 12px;
+    line-height: 16px;
+    cursor: pointer;
+}
+
+.sub__block {
+    background-color: #0F0F0F;
+    padding: 15px;
+}
+.logo {
+    font-family: 'Bebas Neue', cursive;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 54px;
+    
+    color: #FFFFFF;
+}
+.link {
+    font-size: 14px;
+    line-height: 18px;
+    text-transform: uppercase;
+    margin-right: 40px;
+    transition: 0.4s;
+    
+    /* gray */
+    color: #969696;
+}
+.link:hover {
+    color: #FFFFFF;
+    background-color: #1F1F1F;
+    padding: 30px 20px;
+}
+.nav__icon {
+    max-width: 15px;
+    margin-right: 40px;
+    cursor: pointer;
+}
+.nav__icon:last-child {
+    margin-right: 0px;
+}
+
+
+.page {
+    background: url(/img/bg.png) center no-repeat;
+    background-color: #000000;
+    background-size: cover;
+    text-align: center;
+    text-transform: uppercase;
+    height: 810px;
+    padding-top: 150px;
+}
+.page__block {
+    display: inline-block;
+    border: 4px solid #FFFFFF;
+    padding: 90px 65px;
+    margin-bottom: 80px;
+}
+.page__logo {
+    font-family: 'Bebas Neue', cursive;
+    font-weight: 700;
+    font-size: 64px;
+    line-height: 96px;
+    
+    color: #FFFFFF;
+
+    border-bottom: #FFFFFF;
+    padding-bottom: 4px;
+}
+.peter {
+    font-size: 22px;
+    line-height: 28px;
+    margin-top: 8px;
+    
+    color: #FFFFFF;
+}
+.page__text {
+    font-size: 16px;
+    line-height: 150%;
+    max-width: 730px;
+    margin: 0 auto;
+    
+    color: #FFFFFF;
+}
+
+
+.season__sub {
+    display: flex;
+}
+.season__inner {
+    display: flex;
+    background-color: #000000;
+    padding: 90px 80px;
+    font-family: 'Playfair Display';
+}
+.season__block {
+    margin-right: 50px;
+}
+.season__block:last-child {
+    margin-right: 0px;
+}
+.season__logo {
+    font-family: 'Playfair Display', serif;
+    font-size: 36px;
+    line-height: 42px;
+    text-align: center;
+    text-transform: uppercase;
+    
+    /* white */
+    color: #FFFFFF;
+}
+.wath__box {
+    margin-top: 100px;
+}
+.wath__img {
+    background-color: #191B1C;
+    padding: 55px 22px;
+}
+.athos {
+    margin-top: 25px;
+    font-size: 18px;
+    line-height: 21px;
+    
+    /* white */
+    color: #FFFFFF;
+}
+.rub {
+    margin-top: 10px;
+    font-size: 16px;
+    line-height: 19px;
+    
+    /* light-gray */
+    color: #D0D0D0;
+}
+
+.catalog {
+    background: url(/img/gentelman.png) center no-repeat;
+    background-color: #000000;
+    background-size: cover;
+    width: 100%;
+    padding-top: 480px;
+}
+.style__text {
+    text-align: center;
+    text-transform: uppercase;
+}
+.logo__collection {
+    font-family: 'Playfair Display';
+    font-size: 36px;
+    line-height: 42px;
+    margin-bottom: 40px;
+    
+    /* white */
+    color: #FFFFFF;
+}
+.catalog__block {
+    display: inline-block;
+    margin-left: 42%;
+    border: 2px solid white;
+    padding: 15px 20px;
+    font-family: 'PT Sans';
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 23px;
+    letter-spacing: 0.1em;
+    margin-top: 50px;
+    
+    /* white */
+    color: #FFFFFF;
+}
+
+.collection {
+    display: flex;
+}
+.collection__block {
+    background-color: #000000;
+    padding: 100px 280px;
+}
+.collection__text {
+    font-family: 'PT Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 150%;
+    margin-top: 40px;
+
+    /* or 21px */
+    text-align: center;
+    
+    /* white */
+    color: #FFFFFF;
+}
+
+
+.new__receipts {
+    background-color: #000000;
+    padding: 120px;
+}
+.new__receipts__logo {
+    font-family: 'Playfair Display';
+    font-size: 36px;
+    line-height: 42px;
+    margin-bottom: 40px;
+    
+    /* white */
+    color: #FFFFFF;
+}
+.new__receipts__wath__box {
+    display: flex;
+    margin-bottom: 40px;
+}
+.new__receipts__wath__box:last-child {
+    margin-bottom: 0px;
+}
+
+
+.brand {
+    background-color: #0F0F0F;
+    padding: 60px 0px;
+}
+.brand__title {
+    margin-bottom: 40px;
+}
+.brand__gallery {
+    display: flex;
+    justify-content: space-between;
+}
+.brand__coco {
+    margin-top: 40px;
+    width: 255px;
+}
+
+.info {
+    background: url(/img/man.jpg) center no-repeat;
+    background-color: #000000;
+    background-size: cover;
+    height: 400px;
+    padding-top: 80px;
+}
+.info__inner {
+    display: flex;
+    justify-content: space-between;
+}
+.info__title {
+    font-family: 'Playfair Display';
+    font-size: 36px;
+    line-height: 42px;
+    
+    /* white */
+    color: #FFFFFF;
+}
+.category__title {
+    margin-bottom: 40px;
+}
+.other {
+    width: 350px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: 40px;
+}
+.category__btn {
+    display: inline-block;
+    background-color: #0F0F0F;
+    padding: 10px 20px;
+    font-family: 'PT Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 150%;
+
+    /* light-gray */
+    color: #D0D0D0;
+}
+.info__text {
+    font-family: 'PT Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 150%;
+    
+    /* white */
+    color: #FFFFFF;
+}
+.mailing__title {
+    margin-bottom: 40px;
+}
+.mailing__text {
+    margin-bottom: 40px;
+}
+.form {
+    display: flex;
+}
+.mailing__input {
+    width: 210px;
+    background: rgba(255, 255, 255, 0.4);
+}
+.mailing__subscrite {
+    font-family: 'PT Sans';
+    padding: 10px 20px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 150%;
+    /* identical to box height, or 21px */
+    letter-spacing: 0.05em;
+    
+    /* white */
+    color: #FFFFFF;
+}
+
+.footer {
+    background-color: #0F0F0F;
+    padding: 17px 0px;
+}
+.footer__inner {
+    display: flex;
+    justify-content: space-between;
+}
+.footer__title {
+    font-family: 'PT Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+    
+    /* light-gray */
+    color: #D0D0D0;
+}
+.figma {
+    font-weight: 700;
+}
+
+.br_with {
+    background-color: #FFFFFF;
+    width: 120px;
+    height: 2px;
+    margin: 0 auto;
+}
+
+
+@media all and (max-width: 480px) {
+    .conteiner {
+        max-width: 375px;
+        margin: 0 auto;
+    }
+    .time__text,
+    .reg {
+        font-size: 4px;
+    }
+    .logo {
+        font-size: 16px;
+    }
+    .link {
+        display: none;
+    }
+    .nav__icon {
+        width: 15px;
+        margin-right: 13px;
+    }
+    .sub__block {
+        padding: 0px 15px;
+    }
+
+    .page {
+        height: 270px;
+        padding-top: 50px;
+    }
+    .page__block {
+        border: 2px solid #FFFFFF;
+        padding: 30px 21px;
+        margin-bottom: 26px;
+    }
+    .page__logo {
+        font-size: 20px;
+    }
+    .peter {
+        font-size: 8px;
+    }
+    .page__text {
+        font-size: 5px;
+        max-width: 245px;
+    }
+    .season__sub {
+        display: flex;
+        flex-direction: column;
+    }
+    .season__inner {
+        display: flex;
+        flex-direction: column;
+        padding: 30px 26px;
+    }
+    .season__block {
+        margin-right: 0px;
+        margin-bottom: 20px;
+    }
+    .season__logo {
+        font-size: 18px;
+    }
+    .wath__box {
+        margin-top: 20px;
+    }
+    .wath__img {
+        padding: 22px 8px;
+    }
+    .wath__img img {
+        width: 200px;
+        margin-left: 10%;
+    }
+    .athos {
+        font-size: 16px;
+    }
+    .rub {
+        font-size: 16px;
+    }
+
+    .catalog {
+        display: none;
+    }
+    .logo__collection {
+        font-size: 20px;
+        margin-bottom: 13px;
+    }
+    .catalog__block {
+        margin-left: 10%;
+        font-size: 16px;
+        margin-top: 16px;
+        padding: 5px 7px;
+    }
+    .collection {
+        display: flex;
+        flex-direction: column;
+    }
+    .suit img {
+        width: 100%;
+    }
+    .collection__block {
+        padding: 30px 20px;
+    }
+    .collection__text {
+        font-size: 12px;
+        margin-top: 13px;
+    }
+
+    .new__receipts {
+        padding: 40px;
+    }
+    .new__receipts__logo {
+        font-size: 18px;
+        margin-bottom: 13px;
+    }
+    .new__receipts__wath__box {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 13px;
+    }
+
+    .brand {
+        padding: 30px 20px;
+    }
+    .brand__title {
+        margin-bottom: 13px;
+        font-size: 22px;
+        color: white;
+    }
+    .brand__gallery {
+        display: flex;
+        flex-direction: column;
+    }
+    .brand__coco {
+        margin-top: 13px;
+        width: 200px;
+    }
+
+    .info {
+        padding: 26px 20px;
+    }
+    .info__inner {
+        display: flex;
+        flex-direction: column;
+    }
+    .info__title {
+        font-size: 22px;
+    }
+    .category__title {
+        margin-bottom: 10px;
+    }
+    .other {
+        width: 50%;
+        margin-top: 13px;
+        gap: 10px;
+    }
+    .category__btn {
+        padding: 3px 7px;
+        font-size: 16px;
+    }
+    .info__text {
+        font-size: 12px;
+    }
+
+    .mailing {
+        display: none;
+    }
+    .mailing__title {
+        margin-bottom: 13px;
+    }
+    .mailing__text {
+        margin-bottom: 13px;
+    }
+    .mailing__input {
+        width: 100px;
+        height: 30px;
+    }
+    .mailing__subscrite {
+        width: 100px;
+        padding: 3px 7px;
+        font-size: 5px;
+    }
+    
+    .footer {
+        padding: 15px 20px;
+    }
+    .footer__title {
+        font-size: 12px;
+    }
+    .br_with {
+        width: 40px;
+    }
+}
